--- a/music.html
+++ b/music.html
@@ -54,7 +54,7 @@
 </header>
 
 <nav>
-  <a href="https://negative0debuged0.github.io/Negative0">Home</a>
+  <a href="https://negative0debuged0.github.io/Negative0Web">Home</a>
   <a href="about.html">About</a>
 </nav>
 
