--- a/index.html
+++ b/index.html
@@ -4,27 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Negative0</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
+            background-color: #f4f4f4;
         }
         .navbar {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: #333;
-            padding: 1em;
+            background-color: #222;
+            padding: 1em 2em;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
         }
         .navbar a {
             color: #fff;
-            padding: 14px 20px;
+            padding: 10px 15px;
             text-decoration: none;
             text-align: center;
+            transition: background-color 0.3s, color 0.3s;
         }
         .navbar a:hover {
-            background-color: #575757;
+            background-color: #ff6347;
+            color: #fff;
         }
         .dropdown {
             position: relative;
@@ -33,8 +40,8 @@
         .dropdown-content {
             display: none;
             position: absolute;
-            background-color: #333;
-            min-width: 160px;
+            background-color: #222;
+            min-width: 180px;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             z-index: 1;
         }
@@ -44,21 +51,31 @@
             text-decoration: none;
             display: block;
             text-align: left;
+            transition: background-color 0.3s, color 0.3s;
         }
         .dropdown-content a:hover {
-            background-color: #575757;
+            background-color: #ff6347;
+            color: #fff;
         }
         .dropdown:hover .dropdown-content {
             display: block;
         }
         .footer {
-            background-color: #333;
+            background-color: #222;
             color: white;
             text-align: center;
             padding: 1em 0;
             position: fixed;
             width: 100%;
             bottom: 0;
+            font-size: 0.9em;
+        }
+        .footer a {
+            color: #ff6347;
+            text-decoration: none;
+        }
+        .footer a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -89,14 +106,13 @@
 <!-- Add your content here -->
 
 <div class="footer">
-    &copy; 2024 Negative0. All rights reserved. | <a href="#privacy-policy" style="color:white;">Privacy Policy</a> | <a href="#terms-of-service" style="color:white;">Terms of Service</a>
+    &copy; 2024 Negative0. All rights reserved. | <a href="#privacy-policy">Privacy Policy</a> | <a href="#terms-of-service">Terms of Service</a>
     <br>
     Follow us: 
-    <a href="https://twitter.com/negative0" style="color:white;">Twitter</a> | 
-    <a href="https://facebook.com/negative0" style="color:white;">Facebook</a> | 
-    <a href="https://instagram.com/negative0" style="color:white;">Instagram</a>
+    <a href="https://twitter.com/negative0">Twitter</a> | 
+    <a href="https://facebook.com/negative0">Facebook</a> | 
+    <a href="https://instagram.com/negative0">Instagram</a>
 </div>
 
 </body>
 </html>
-
