--- a/Password.html
+++ b/Password.html
@@ -57,7 +57,7 @@
         <h1>Negative0 Admin panel</h1>
         <a href="index.html">Zurück</a> <!-- Hyperlink styled to be blue -->
         <input type="text" id="codeInput" placeholder="PASSWORT...">
-        <button type="submit">Sis lal Sasen</button>
+        <button type="submit">Enter</button>
     </form>
 
     <script>
