--- a/Password.html
+++ b/Password.html
@@ -67,7 +67,7 @@
             if (userInput === 'Zetta0') {
                 window.location.href = 'Zetta0'; // Redirect to secret page
             } else {
-                alert('Acces denied'); // Show access denied message
+                alert('Access denied'); // Show access denied message
             }
         });
     </script>
