--- a/Password.html
+++ b/Password.html
@@ -65,7 +65,7 @@
             e.preventDefault(); // Prevent form submission
             var userInput = document.getElementById('codeInput').value.toLowerCase(); // Get user input and convert to lowercase
             if (userInput === 'Zetta0') {
-                window.location.href = 'Zetta0'; // Redirect to secret page
+                window.location.href = 'Zetta0.html'; // Redirect to secret page
             } else {
                 alert('Access denied'); // Show access denied message
             }
