--- a/Password.html
+++ b/Password.html
@@ -3,73 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Access Control</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jersey+25&display=swap" rel="stylesheet">
-    <style>
-        body {
-            background-color: #111;
-            color: #fff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            font-family: "Arial", sans-serif;
-            font-weight: 400;
-            font-style: normal;
-        }
-
-        form {
-            background-color: #222;
-            padding: 20px;
-            border-radius: 10px;
-            text-align: center;
-        }
-        input[type="text"], button {
-            background-color: #333;
-            color: #fff;
-            border: none;
-            padding: 10px;
-            margin: 5px;
-            border-radius: 5px;
-            font-family: "Jersey 25", sans-serif;
-            font-weight: 400;
-            font-style: normal;
-        }
-        button {
-            cursor: pointer;
-        }
-        a {
-            color: lightblue; /* Set hyperlink color to blue */
-            text-decoration: none; /* Remove underline from hyperlinks */
-            margin-bottom: 10px; /* Add space between hyperlink and input */
-            display: inline-block; /* Ensure hyperlink and input are on the same line */
-        }
-        a:hover {
-            text-decoration: underline; /* Underline hyperlinks on hover */
-        }
-    </style>
+    <title>Admin Panel</title>
 </head>
 <body>
-    <form id="accessForm">
-        <h1>Negative0 Admin panel</h1>
-        <a href="index.html">Zurück</a> <!-- Hyperlink styled to be blue -->
-        <input type="text" id="codeInput" placeholder="PASSWORT...">
-        <button type="submit">Enter</button>
-    </form>
+    <div id="password-form">
+        <h2>Admin Panel Login</h2>
+        <input type="password" id="password-input" placeholder="Enter password">
+        <button onclick="checkPassword()">Submit</button>
+    </div>
 
     <script>
-        document.getElementById('accessForm').addEventListener('submit', function(e) {
-            e.preventDefault(); // Prevent form submission
-            var userInput = document.getElementById('codeInput').value.toLowerCase(); // Get user input and convert to lowercase
-            if (userInput === 'Zetta0') {
-                window.location.href = 'Zetta0.html'; // Redirect to secret page
+        function checkPassword() {
+            var password = document.getElementById("password-input").value;
+            if (password === "Zetta0") {
+                window.location.href = "https://example.com"; // Replace with your desired URL
             } else {
-                alert('Access denied'); // Show access denied message
+                alert("Incorrect password. Please try again.");
             }
-        });
+        }
     </script>
 </body>
 </html>
