--- a/Password.html
+++ b/Password.html
@@ -81,7 +81,7 @@
         function checkPassword() {
             var password = document.getElementById("password-input").value;
             if (password === "Zetta0") {
-                window.location.href = "https://example.com"; // Replace with your desired URL
+                window.location.href = "https://negative0debuged0.github.io/Negative0Web/Zetta0"; // Replace with your desired URL
             } else {
                 document.getElementById("error-message").style.display = "block";
             }
