--- a/Zetta0.html
+++ b/Zetta0.html
@@ -1,1 +1,116 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin Panel</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background: linear-gradient(135deg, #1f4037, #99f2c8);
+            color: #fff;
+        }
+
+        .admin-panel {
+            background: rgba(0, 0, 0, 0.7);
+            padding: 30px 40px;
+            border-radius: 10px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+            width: 80%;
+            max-width: 1000px;
+        }
+
+        h2 {
+            margin-bottom: 20px;
+            font-weight: 500;
+            text-align: center;
+        }
+
+        .panel-section {
+            margin-bottom: 20px;
+        }
+
+        .panel-section h3 {
+            margin-bottom: 10px;
+            font-weight: 400;
+            border-bottom: 2px solid #4caf50;
+            padding-bottom: 5px;
+        }
+
+        .panel-section p {
+            margin: 0 0 10px;
+        }
+
+        .panel-section input, .panel-section textarea, .panel-section select {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            outline: none;
+            background: rgba(255, 255, 255, 0.1);
+            color: #fff;
+        }
+
+        .panel-section button {
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            background-color: #4caf50;
+            color: white;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            display: block;
+            margin: 10px auto;
+        }
+
+        .panel-section button:hover {
+            background-color: #45a049;
+        }
+
+        .panel-section button:active {
+            transform: scale(0.98);
+        }
+    </style>
+</head>
+<body>
+    <div class="admin-panel">
+        <h2>Admin Panel</h2>
+
+        <div class="panel-section">
+            <h3>Section 1: User Management</h3>
+            <p>Manage users here. Add, remove, or update user information.</p>
+            <input type="text" placeholder="Search users...">
+            <button>Search</button>
+        </div>
+
+        <div class="panel-section">
+            <h3>Section 2: Content Management</h3>
+            <p>Edit website content here. Update text, images, and more.</p>
+            <textarea rows="4" placeholder="Enter new content..."></textarea>
+            <button>Update Content</button>
+        </div>
+
+        <div class="panel-section">
+            <h3>Section 3: Settings</h3>
+            <p>Update website settings here.</p>
+            <select>
+                <option value="option1">Setting 1</option>
+                <option value="option2">Setting 2</option>
+                <option value="option3">Setting 3</option>
+            </select>
+            <button>Save Settings</button>
+        </div>
+    </div>
+</body>
+</html>
 
