--- a/index.html
+++ b/index.html
@@ -102,24 +102,18 @@
 
 <div class="navbar">
     <a href="">Home</a>
-    <a href="#about">About Us</a>
+    <a href="https://negative0debuged0.github.io/Negative0Web/About">About</a>
     <div class="dropdown">
-        <a href="#services">Services</a>
+        <a href="https://negative0debuged0.github.io/Negative0Web/Socials">Socials</a>
         <div class="dropdown-content">
-            <a href="#web-development">Web Development</a>
-            <a href="#app-development">App Development</a>
-            <a href="#digital-marketing">Digital Marketing</a>
-            <a href="#consulting">Consulting</a>
+            <a href="https://www.youtube.com/channel/UCTWn1tUqbSNLrCLyunHnlcA">Youtube</a>
+            <a href="https://steamcommunity.com/id/-Negative0_Debuged0/">Steam</a>
+            <a href="https://discord.gg/kQfVYQuJGt">Discord Server</a>
         </div>
     </div>
-    <a href="#portfolio">Portfolio</a>
-    <a href="#blog">Blog</a>
-    <a href="#contact">Contact Us</a>
-    <a href="#faq">FAQ</a>
-    <a href="#testimonials">Testimonials</a>
-    <a href="#careers">Careers</a>
+    <a href="https://negative0debuged0.github.io/Negative0Web/Music">Music</a>
+    <a href="#https://negative0debuged0.github.io/Negative0Web/FAQ">FAQ</a>
     <a href="https://negative0debuged0.github.io/Negative0Web/Password">Admin Panel</a>
-    <a href="#support">Support</a>
 </div>
 
 <!-- Add your content here -->
