--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
     </div>
     <a href="https://negative0debuged0.github.io/Negative0Web/Music">Music</a>
-    <a href="#https://negative0debuged0.github.io/Negative0Web/FAQ">FAQ</a>
+    <a href="https://negative0debuged0.github.io/Negative0Web/FAQ">FAQ</a>
     <a href="https://negative0debuged0.github.io/Negative0Web/Password">Admin Panel</a>
 </div>
 
