--- a/music.html
+++ b/music.html
@@ -1,71 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Music Section</title>
-<style>
-  /* Style for the container */
-  .music-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin-top: 20px;
-  }
-  
-  /* Style for each iframe */
-  .music-iframe {
-    width: 45%;
-    max-width: 600px;
-    height: 400px;
-    margin-bottom: 20px;
-  }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Music Section</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background: linear-gradient(135deg, #1f4037, #99f2c8);
+            color: #fff;
+        }
 
-  /* Style for header */
-  header {
-    background-color: #333;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-  }
+        header {
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 20px;
+            width: 100%;
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+        }
 
-  /* Style for navigation */
-  nav {
-    background-color: #f4f4f4;
-    padding: 10px 20px;
-    text-align: center;
-  }
+        nav {
+            background-color: rgba(255, 255, 255, 0.2);
+            padding: 10px 20px;
+            text-align: center;
+            width: 100%;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+        }
 
-  nav a {
-    margin: 0 10px;
-    text-decoration: none;
-    color: #333;
-  }
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: #fff;
+            font-weight: 500;
+        }
 
-  nav a:hover {
-    color: #666;
-  }
-</style>
+        nav a:hover {
+            color: #ccc;
+        }
+
+        .music-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            padding: 20px;
+            max-width: 1200px;
+            width: 100%;
+        }
+
+        .music-iframe {
+            width: 45%;
+            max-width: 600px;
+            height: 400px;
+            margin: 10px;
+            border: none;
+            border-radius: 10px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+        }
+    </style>
 </head>
 <body>
 
 <header>
-  <h1>Music Section</h1>
+    <h1>Music Section</h1>
 </header>
 
 <nav>
-  <a href="https://negative0debuged0.github.io/Negative0Web">Home</a>
-  <a href="about.html">About</a>
+    <a href="https://negative0debuged0.github.io/Negative0Web">Home</a>
+    <a href="about.html">About</a>
 </nav>
 
 <div class="music-container">
-  <!-- First music -->
-  <iframe class="music-iframe" src="https://www.youtube.com/embed/eAQmGECNQuQ" title="Fishy friend (final version)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-  
-  <!-- Second music -->
-  <iframe class="music-iframe" src="https://www.youtube.com/embed/WcfeFQAvp1g" title="Undertale AU Style Music" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <!-- First music -->
+    <iframe class="music-iframe" src="https://www.youtube.com/embed/eAQmGECNQuQ" title="Fishy friend (final version)" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    
+    <!-- Second music -->
+    <iframe class="music-iframe" src="https://www.youtube.com/embed/WcfeFQAvp1g" title="Undertale AU Style Music" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 
 </body>
 </html>
-
