--- a/Music.html
+++ b/Music.html
@@ -13,13 +13,13 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background: linear-gradient(135deg, #1f4037, #99f2c8);
+            background-color: #1E88E5; /* Blue background color */
             color: #fff;
         }
 
         header {
-            background-color: rgba(0, 0, 0, 0.7);
-            color: white;
+            background-color: #1565C0; /* Darker blue for header */
+            color: #fff;
             padding: 20px;
             width: 100%;
             text-align: center;
@@ -27,7 +27,7 @@
         }
 
         nav {
-            background-color: rgba(255, 255, 255, 0.2);
+            background-color: #64B5F6; /* Lighter blue for navigation */
             padding: 10px 20px;
             text-align: center;
             width: 100%;
