--- a/Music.html
+++ b/Music.html
@@ -13,7 +13,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: #1E88E5; /* Blue background color */
+            background: linear-gradient(135deg, #1E88E5, #64B5F6); /* Blue gradient background */
             color: #fff;
         }
 
