--- a/Music.html
+++ b/Music.html
@@ -13,12 +13,12 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background: linear-gradient(135deg, #1E88E5, #64B5F6); /* Blue gradient background */
+            background: linear-gradient(135deg, #b3e5fc, #0d47a1); /* Gradient background */
             color: #fff;
         }
 
         header {
-            background-color: #1565C0; /* Darker blue for header */
+            background: linear-gradient(135deg, #1565c0, #0d47a1); /* Gradient header */
             color: #fff;
             padding: 20px;
             width: 100%;
