--- a/Faq.html
+++ b/Faq.html
@@ -57,16 +57,16 @@
 
 <div class="faq-container">
     <div class="faq-item">
-        <div class="faq-question">What is Lorem Ipsum?</div>
-        <div class="faq-answer">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
+        <div class="faq-question">who are you</div>
+        <div class="faq-answer">im a programmer/gamer playing making games and websites and playing games like gmod, minecraft, s&box,etc check my steam account to see all the games i play</div>
     </div>
     <div class="faq-item">
-        <div class="faq-question">Why do we use it?</div>
-        <div class="faq-answer">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</div>
+        <div class="faq-question">Were can i get updates on your games/projects</div>
+        <div class="faq-answer">right now you can join the discord server to get updates on my projects</div>
     </div>
     <div class="faq-item">
-        <div class="faq-question">Where does it come from?</div>
-        <div class="faq-answer">Contrary to popular belief, Lorem Ipsum is not simply random text.</div>
+        <div class="faq-question">Where do i ask more questions</div>
+        <div class="faq-answer">You can ask me more questions on the discord</div>
     </div>
 </div>
 
