--- a/Faq.html
+++ b/Faq.html
@@ -13,7 +13,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background: linear-gradient(135deg, #FFB74D, #FFD54F); /* Gradient background: orange to yellow */
+            background: linear-gradient(135deg, #FF7043, #FFD54F); /* Gradient background: orange-red to yellow */
             color: #fff;
         }
 
