--- a/Faq.html
+++ b/Faq.html
@@ -46,6 +46,7 @@
         .faq-answer {
             margin-bottom: 20px;
             font-size: 16px;
+            color: #FF0000; /* Red color for answers */
         }
     </style>
 </head>
