--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #1a1a1a;
+            background: linear-gradient(135deg, #FF0000, #000000); /* Gradient background: red to black */
             color: #eaeaea;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         .navbar {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background: linear-gradient(90deg, #333, #444);
+            background: linear-gradient(90deg, #800000, #000000); /* Gradient navbar: dark red to black */
             padding: 1em 2em;
+            width: 100%;
             position: sticky;
             top: 0;
             z-index: 1000;
@@ -83,11 +87,11 @@
             color: white;
             text-align: center;
             padding: 1em 0;
-            position: fixed;
             width: 100%;
-            bottom: 0;
             font-size: 0.9em;
             box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.2);
+            position: fixed;
+            bottom: 0;
         }
         .footer a {
             color: #ff6347;
@@ -125,5 +129,3 @@
 
 </body>
 </html>
-
-
