--- a/Faq.html
+++ b/Faq.html
@@ -31,9 +31,10 @@
             width: 90%;
             margin-top: 20px;
             padding: 20px;
-            background-color: rgba(255, 255, 255, 0.8); /* Light background with transparency */
+            background-color: rgba(255, 255, 255, 0.1); /* Transparent background */
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+            backdrop-filter: blur(10px); /* Blur effect */
         }
 
         .faq-question {
@@ -58,18 +59,19 @@
 
 <div class="faq-container">
     <div class="faq-item">
-        <div class="faq-question">who are you</div>
-        <div class="faq-answer">im a programmer/gamer playing making games and websites and playing games like gmod, minecraft, s&box,etc check my steam account to see all the games i play</div>
+        <div class="faq-question">Who are you?</div>
+        <div class="faq-answer">I'm a programmer/gamer who enjoys making games and websites and playing games like Gmod, Minecraft, S&box, etc. Check my Steam account to see all the games I play.</div>
     </div>
     <div class="faq-item">
-        <div class="faq-question">Were can i get updates on your games/projects</div>
-        <div class="faq-answer">right now you can join the discord server to get updates on my projects</div>
+        <div class="faq-question">Where can I get updates on your games/projects?</div>
+        <div class="faq-answer">Right now, you can join the Discord server to get updates on my projects.</div>
     </div>
     <div class="faq-item">
-        <div class="faq-question">Where do i ask more questions</div>
-        <div class="faq-answer">You can ask me more questions on the discord</div>
+        <div class="faq-question">Where do I ask more questions?</div>
+        <div class="faq-answer">You can ask me more questions on Discord.</div>
     </div>
 </div>
 
 </body>
 </html>
+
