--- a/Faq.html
+++ b/Faq.html
@@ -31,10 +31,9 @@
             width: 90%;
             margin-top: 20px;
             padding: 20px;
-            background-color: rgba(255, 255, 255, 0.1); /* Transparent background */
+            background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent black background */
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-            backdrop-filter: blur(10px); /* Blur effect */
         }
 
         .faq-question {
@@ -74,4 +73,5 @@
 
 </body>
 </html>
+
 
