--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
     <a href="https://negative0debuged0.github.io/Negative0Web/Music">Music</a>
     <a href="https://negative0debuged0.github.io/Negative0Web/Faq">FAQ</a>
     <a href="https://negative0debuged0.github.io/Negative0Web/Password">Admin panel</a>
+    <a href="https://negative0debuged0.github.io/Negative0Web/Games">Games</a>
 </div>
 
 <!-- Add your content here -->
