--- a/flappy.html
+++ b/flappy.html
@@ -16,6 +16,7 @@
             background: linear-gradient(135deg, #6A0DAD, #1E90FF); /* Gradient background: purple to blue */
             color: #fff;
             overflow: hidden;
+            height: 100vh;
         }
 
         header {
@@ -58,7 +59,7 @@
         <input type="file" id="imageUpload" accept="image/*">
     </div>
 
-    <canvas id="gameCanvas" width="400" height="600"></canvas>
+    <canvas id="gameCanvas" width="800" height="600"></canvas>
 
     <script src="flappy.js"></script>
 </body>
