--- a/flappy.html
+++ b/flappy.html
@@ -92,8 +92,12 @@
             if (file) {
                 const reader = new FileReader();
                 reader.onload = function(e) {
-                    bird.src = e.target.result;
-                    birdImageSrc = e.target.result;
+                    const img = new Image();
+                    img.onload = function() {
+                        bird.src = e.target.result;
+                        birdImageSrc = e.target.result;
+                    };
+                    img.src = URL.createObjectURL(file);
                 };
                 reader.readAsDataURL(file);
             }
