--- a/flappy.html
+++ b/flappy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flappy Bird with Custom Character use chrome for the best experience</title>
+    <title>Flappy Bird with Custom Character</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -51,7 +51,7 @@
 </head>
 <body>
     <header>
-        <h1>Flappy Bird with Custom Character</h1>
+        <h1>Flappy Bird with Custom Character Use Chrome for a better experience</h1>
     </header>
     
     <div id="uploadContainer">
