--- a/Game2.html
+++ b/Game2.html
@@ -3,102 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Infinite Craft</title>
+    <title>Platformer Game</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-
-        header, footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-        }
-
-        main {
-            display: flex;
-            justify-content: space-around;
-            padding: 20px;
-        }
-
-        #elements, #combinations {
-            width: 45%;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        li {
-            cursor: pointer;
-            margin-bottom: 10px;
-            padding: 8px;
-            background-color: #f0f0f0;
-            border-radius: 3px;
-            transition: background-color 0.3s ease;
-        }
-
-        li:hover {
-            background-color: #e0e0e0;
-        }
-
-        h2 {
-            margin-top: 0;
+        canvas {
+            border: 1px solid black;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Infinite Craft</h1>
-    </header>
-    <main>
-        <div id="elements">
-            <h2>Elements</h2>
-            <ul id="elementList">
-                <li>Air</li>
-                <li>Dirt</li>
-                <li>Water</li>
-                <!-- Add more initial elements here -->
-            </ul>
-        </div>
-        <div id="combinations">
-            <h2>Combinations</h2>
-            <ul id="combinationList">
-                <!-- Combined elements will be added here -->
-            </ul>
-        </div>
-    </main>
-    <footer>
-        <p>&copy; 2024 Infinite Craft</p>
-    </footer>
+    <input type="file" id="imageUpload" accept="image/*">
+    <canvas id="gameCanvas" width="800" height="600"></canvas>
+
     <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const elementList = document.getElementById("elementList");
-            const combinationList = document.getElementById("combinationList");
+        const canvas = document.getElementById('gameCanvas');
+        const ctx = canvas.getContext('2d');
+        let playerImage = null;
+        let playerX = 50;
+        let playerY = 100;
+        let gravity = 0.5;
+        let jumpStrength = -10;
+        let playerVelocityY = 0;
+        let isJumping = false;
 
-            // Add event listener to element list
-            elementList.addEventListener("click", function(event) {
-                if (event.target.tagName === "LI") {
-                    combineElements(event.target.textContent);
-                }
-            });
+        // Function to handle image upload
+        document.getElementById('imageUpload').addEventListener('change', function(event) {
+            const file = event.target.files[0];
+            const reader = new FileReader();
+            reader.onload = function(event) {
+                const img = new Image();
+                img.onload = function() {
+                    playerImage = img;
+                };
+                img.src = event.target.result;
+            };
+            reader.readAsDataURL(file);
+        });
 
-            // Function to combine elements
-            function combineElements(element) {
-                const combinedElement = document.createElement("li");
-                combinedElement.textContent = element + " + " + element;
-                combinationList.appendChild(combinedElement);
+        // Function to update game state
+        function update() {
+            // Apply gravity
+            playerVelocityY += gravity;
+            playerY += playerVelocityY;
+
+            // Jumping logic
+            if (isJumping && playerY > canvas.height - playerImage.height) {
+                playerVelocityY = jumpStrength;
+            }
+
+            // Collision detection with ground
+            if (playerY > canvas.height - playerImage.height) {
+                playerY = canvas.height - playerImage.height;
+                playerVelocityY = 0;
+            }
+
+            // Clear canvas
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+            // Draw player character
+            if (playerImage) {
+                ctx.drawImage(playerImage, playerX, playerY);
+            }
+
+            requestAnimationFrame(update);
+        }
+
+        // Event listeners for player controls
+        document.addEventListener('keydown', function(event) {
+            if (event.key === ' ' && playerY === canvas.height - playerImage.height) {
+                isJumping = true;
             }
         });
+
+        document.addEventListener('keyup', function(event) {
+            if (event.key === ' ') {
+                isJumping = false;
+            }
+        });
+
+        // Start the game loop
+        update();
     </script>
 </body>
 </html>
