--- a/Game2.html
+++ b/Game2.html
@@ -3,85 +3,179 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Platformer Game</title>
+    <title>Snake Game</title>
     <style>
-        canvas {
-            border: 1px solid black;
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+
+        #gameCanvas {
+            border: 2px solid #333;
+            background-color: #fff;
+        }
+
+        #score {
+            margin-top: 20px;
+            font-size: 24px;
+            color: #333;
         }
     </style>
 </head>
 <body>
-    <input type="file" id="imageUpload" accept="image/*">
-    <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <h1>Snake Game</h1>
+    <canvas id="gameCanvas" width="400" height="400"></canvas>
+    <div id="score">Score: 0</div>
 
     <script>
-        const canvas = document.getElementById('gameCanvas');
-        const ctx = canvas.getContext('2d');
-        let playerImage = null;
-        let playerX = 50;
-        let playerY = 100;
-        let gravity = 0.5;
-        let jumpStrength = -10;
-        let playerVelocityY = 0;
-        let isJumping = false;
+        document.addEventListener('DOMContentLoaded', function() {
+            const canvas = document.getElementById('gameCanvas');
+            const ctx = canvas.getContext('2d');
+            const scale = 20;
+            const rows = canvas.height / scale;
+            const columns = canvas.width / scale;
+            let snake;
+            let food;
+            let score = 0;
 
-        // Function to handle image upload
-        document.getElementById('imageUpload').addEventListener('change', function(event) {
-            const file = event.target.files[0];
-            const reader = new FileReader();
-            reader.onload = function(event) {
-                const img = new Image();
-                img.onload = function() {
-                    playerImage = img;
+            (function setup() {
+                snake = new Snake();
+                food = new Food();
+                food.pickLocation();
+
+                window.setInterval(() => {
+                    ctx.clearRect(0, 0, canvas.width, canvas.height);
+                    food.draw();
+                    snake.update();
+                    snake.draw();
+
+                    if (snake.eat(food)) {
+                        score += 10;
+                        document.getElementById('score').textContent = 'Score: ' + score;
+                        food.pickLocation();
+                    }
+
+                    snake.checkCollision();
+                }, 250);
+            })();
+
+            window.addEventListener('keydown', e => {
+                const direction = e.key.replace('Arrow', '');
+                snake.changeDirection(direction);
+            });
+
+            function Snake() {
+                this.x = 0;
+                this.y = 0;
+                this.xSpeed = scale * 1;
+                this.ySpeed = 0;
+                this.total = 0;
+                this.tail = [];
+
+                this.draw = function() {
+                    ctx.fillStyle = "#333";
+
+                    for (let i = 0; i < this.tail.length; i++) {
+                        ctx.fillRect(this.tail[i].x, this.tail[i].y, scale, scale);
+                    }
+
+                    ctx.fillRect(this.x, this.y, scale, scale);
                 };
-                img.src = event.target.result;
-            };
-            reader.readAsDataURL(file);
+
+                this.update = function() {
+                    for (let i = 0; i < this.tail.length - 1; i++) {
+                        this.tail[i] = this.tail[i + 1];
+                    }
+
+                    this.tail[this.total - 1] = { x: this.x, y: this.y };
+
+                    this.x += this.xSpeed;
+                    this.y += this.ySpeed;
+
+                    if (this.x >= canvas.width) {
+                        this.x = 0;
+                    } else if (this.x < 0) {
+                        this.x = canvas.width - scale;
+                    }
+
+                    if (this.y >= canvas.height) {
+                        this.y = 0;
+                    } else if (this.y < 0) {
+                        this.y = canvas.height - scale;
+                    }
+                };
+
+                this.changeDirection = function(direction) {
+                    switch (direction) {
+                        case 'Up':
+                            if (this.ySpeed !== scale * 1) {
+                                this.xSpeed = 0;
+                                this.ySpeed = -scale * 1;
+                            }
+                            break;
+                        case 'Down':
+                            if (this.ySpeed !== -scale * 1) {
+                                this.xSpeed = 0;
+                                this.ySpeed = scale * 1;
+                            }
+                            break;
+                        case 'Left':
+                            if (this.xSpeed !== scale * 1) {
+                                this.xSpeed = -scale * 1;
+                                this.ySpeed = 0;
+                            }
+                            break;
+                        case 'Right':
+                            if (this.xSpeed !== -scale * 1) {
+                                this.xSpeed = scale * 1;
+                                this.ySpeed = 0;
+                            }
+                            break;
+                    }
+                };
+
+                this.eat = function(food) {
+                    if (this.x === food.x && this.y === food.y) {
+                        this.total++;
+                        return true;
+                    }
+                    return false;
+                };
+
+                this.checkCollision = function() {
+                    for (let i = 0; i < this.tail.length; i++) {
+                        if (this.x === this.tail[i].x && this.y === this.tail[i].y) {
+                            score = 0;
+                            this.total = 0;
+                            this.tail = [];
+                            document.getElementById('score').textContent = 'Score: ' + score;
+                        }
+                    }
+                };
+            }
+
+            function Food() {
+                this.x;
+                this.y;
+
+                this.pickLocation = function() {
+                    this.x = (Math.floor(Math.random() * rows)) * scale;
+                    this.y = (Math.floor(Math.random() * columns)) * scale;
+                };
+
+                this.draw = function() {
+                    ctx.fillStyle = "#FF0000";
+                    ctx.fillRect(this.x, this.y, scale, scale);
+                };
+            }
         });
-
-        // Function to update game state
-        function update() {
-            // Apply gravity
-            playerVelocityY += gravity;
-            playerY += playerVelocityY;
-
-            // Jumping logic
-            if (isJumping && playerY > canvas.height - playerImage.height) {
-                playerVelocityY = jumpStrength;
-            }
-
-            // Collision detection with ground
-            if (playerY > canvas.height - playerImage.height) {
-                playerY = canvas.height - playerImage.height;
-                playerVelocityY = 0;
-            }
-
-            // Clear canvas
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-            // Draw player character
-            if (playerImage) {
-                ctx.drawImage(playerImage, playerX, playerY);
-            }
-
-            requestAnimationFrame(update);
-        }
-
-        // Event listeners for player controls
-        document.addEventListener('keydown', function(event) {
-            if (event.key === ' ' && playerY === canvas.height - playerImage.height) {
-                isJumping = true;
-            }
-        });
-
-        document.addEventListener('keyup', function(event) {
-            if (event.key === ' ') {
-                isJumping = false;
-            }
-        });
-
-        // Start the game loop
-        update();
     </script>
 </body>
 </html>
