--- a/Game2.html
+++ b/Game2.html
@@ -9,12 +9,12 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             height: 100vh;
+            background: linear-gradient(to bottom, #8a2be2, #4b0082); /* Purple to blue gradient */
         }
 
         #gameCanvas {
@@ -25,7 +25,7 @@
         #score {
             margin-top: 20px;
             font-size: 24px;
-            color: #333;
+            color: #fff;
         }
     </style>
 </head>
@@ -99,16 +99,8 @@
                     this.x += this.xSpeed;
                     this.y += this.ySpeed;
 
-                    if (this.x >= canvas.width) {
-                        this.x = 0;
-                    } else if (this.x < 0) {
-                        this.x = canvas.width - scale;
-                    }
-
-                    if (this.y >= canvas.height) {
-                        this.y = 0;
-                    } else if (this.y < 0) {
-                        this.y = canvas.height - scale;
+                    if (this.x >= canvas.width || this.x < 0 || this.y >= canvas.height || this.y < 0) {
+                        gameOver();
                     }
                 };
 
@@ -152,10 +144,7 @@
                 this.checkCollision = function() {
                     for (let i = 0; i < this.tail.length; i++) {
                         if (this.x === this.tail[i].x && this.y === this.tail[i].y) {
-                            score = 0;
-                            this.total = 0;
-                            this.tail = [];
-                            document.getElementById('score').textContent = 'Score: ' + score;
+                            gameOver();
                         }
                     }
                 };
@@ -174,6 +163,19 @@
                     ctx.fillStyle = "#FF0000";
                     ctx.fillRect(this.x, this.y, scale, scale);
                 };
+            }
+
+            function gameOver() {
+                alert('Game Over!');
+                score = 0;
+                snake.total = 0;
+                snake.tail = [];
+                document.getElementById('score').textContent = 'Score: ' + score;
+                snake.x = 0;
+                snake.y = 0;
+                snake.xSpeed = scale * 1;
+                snake.ySpeed = 0;
+                food.pickLocation();
             }
         });
     </script>
