--- a/Game2.html
+++ b/Game2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake Game</title>
+    <title>Snake Game use arrow keys to move</title>
     <style>
         body {
             font-family: Arial, sans-serif;
