--- a/Music.html
+++ b/Music.html
@@ -82,6 +82,8 @@
     
     <!-- Second music -->
     <iframe class="music-iframe" src="https://www.youtube.com/embed/WcfeFQAvp1g" title="Undertale AU Style Music" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="1257" height="707" src="https://www.youtube.com/embed/XX5L1pm7HYI" title="Retro Video game bossfight style music" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="1257" height="707" src="https://www.youtube.com/embed/PVtFu0dhJ2s" title="Random Eletronic music" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 
 </body>
